--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
     <textarea type="text" name="burger" id="burger" class="col-12 col-md-6 mb-2"></textarea>
   </div>
 
-<p class="text-secondary mt-2">Enter the name of the burger you want to eat!/p>
+<p class="text-secondary mt-2">Enter the name of the burger you want to eat!</p>
   <button type="submit" class="btn btn-primary">Add Burger</button>
 
 </form>
