--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <h3 class="text-secondary">Ready to devour!</h2>
+    <h3 class="text-secondary">Burgers to Devour:</h2>
     <ul class="list-group">
       {{#each burgers}}
       {{#unless devoured}}
@@ -14,7 +14,7 @@
   </div>
 
 <div class="col-sm-6">
-  <h3 class="text-secondary">Devoured Burgers</h2>
+  <h3 class="text-secondary">Devoured Burgers:</h2>
   <ul class="list-group">
     {{#each burgers}}
     {{#if devoured}}
