--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,11 +2,11 @@
 	{{burger_name}}
 	{{#if devour}}
 		<button class="devour-btn btn btn-outline-primary btn-sm float-end" title="devour" data-id="{{id}}">
-			<i class="material-icons fs-2" data-id="{{id}}">restaurant</i>
+			<i class="material-icons fs-2" data-id="{{id}}">fastfood</i>
 		</button>
 		{{else}}
 		<button class="delete-btn btn btn-outline-danger btn-sm float-end" title="delete" data-id="{{id}}">
-			<i class="material-icons fs-2" data-id="{{id}}">clear</i>
+			<i class="material-icons fs-2" data-id="{{id}}">delete</i>
 		</button>
 	{{/if}}
 </li>
